# rpi-weather-station

./: .coverage  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  coverage.xml  main.py  pyproject.toml  setup.cfg  test_postgres.py  weather.creds
.github/workflows/: ci.yml
.junie/: guidelines.md
requirements/: local.txt  requirements.txt
scripts/: install.sh  setup.sh  weather.station.service
src/: air_quality.py  dht22.py  hardware.py  sds011.py  settings.py  utils.py
src/communication/: api.py  influxdb.py  mqtt.py  postgres.py  send_data.py  sensor_community.py  sqs.py
src/sensors/: bme280sensor.py  dht22.py  dht22sensor.py  sds011.py
tests/: test_api.py  test_bme280sensor.py  test_dht22sensor.py  test_hardware.py  test_influxdb.py  test_main.py  test_mqtt.py  test_postgres.py  test_sds011sensor.py  test_send_data.py  test_sensor_community.py  test_sqs.py  test_utils.py
