[project]
name = "rpi-weather-station"
requires-python = ">=3.9"

[tool.ruff]
line-length = 120
target-version = ["py39", "py310", "py311", "py312", "py313"]
exclude = [
    "env",
    "**/migrations/*",
    "**/settings/*",
]
src = ["**/src"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.isort]
case-sensitive = true

[tool.mypy]
mypy_path = "./src"
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
exclude = 'env'


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"
